[gd_scene load_steps=6 format=3 uid="uid://fyn360ex0vop"]

[ext_resource type="Script" path="res://ui/root/notification_center/notification.gd" id="1_ahdp3"]
[ext_resource type="Texture2D" uid="uid://ccnuoncf0j2vm" path="res://ui/icons/icon_close.svg" id="2_ibjbc"]
[ext_resource type="Script" path="res://common/custom_types/custom_label_settings.gd" id="2_mkpqv"]
[ext_resource type="Script" path="res://ui/common/auto_scale.gd" id="4_sby1g"]

[sub_resource type="LabelSettings" id="LabelSettings_cce54"]
font_size = 12
font_color = Color(0.701961, 0.701961, 0.701961, 1)
script = ExtResource("2_mkpqv")

[node name="Notification" type="PanelContainer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_type_variation = &"PanelContainerTransparent"
script = ExtResource("1_ahdp3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 3

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Notification title"

[node name="DetailsLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Description"
label_settings = SubResource("LabelSettings_cce54")

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_ibjbc")
expand_icon = true

[node name="AutoScale" type="Node" parent="MarginContainer/HBoxContainer/CloseButton"]
script = ExtResource("4_sby1g")
